# PL2-CPS

./: .gitignore  Grupo2SanzMansillaGodoy.xlsx  Practica2_Fiabilidad.xlsx
doc/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
python/: gilded_rose.py  pyproject.toml  texttest_fixture.py
python/reference/: gilded_rose_finished.py
python/tests/: test_gilded_rose.py
