[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "H0L0N", email = "d.godoy.developer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "approvaltests>=17.4.3",
    "pytest>=9.0.3",
    "radon>=6.0.1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
